[B] house(dna) data was broken if bedtown was static when saving.
    (hand-made dungeon/tower still causes infinite loop prolly.)
[B] p_ptr->total_weight went wrong when adding ammo to the quiver.
[B] TOOL_EQUIPPED ignored tval.
[B] TV_POTION2 was white when in the inventory/0au when non-id-ed.

16/06/2002 (Jir)
- /news, displays news.txt
- you can no longer drop items on stairs/store-entrances.
[H] you can go into a store with '>' key.
[B] TV_POTION2 didn't shatter when thrown.
[B] you couldn't fire missiles, doh!
[B] was trying to read 'mangband.rfe' while rfe file was 'tomenet.rfe'.
[B] floors got unstaticed prematually sometimes (prolly my enbug).
[B] STR damage by swimming exertion could be prevented by sustain_str.


** [B] stands for Bugfix.
** [C] stands for Client changes.
** [H] stands for Hack and rebalancement :)
** [P] stands for Porting from ToME.

=============================================================================
concisely: what's hot now?

- multiple-dungeons stuff
  + we should preserve level_up_y etc. for manually-added dungeons/towers.
- quest system
- skill system
  + interfere() should be affected by archery/wizardly skills?
- LUA hook
- csfunc
- alignment (let's wait for EE :)
- item stacking

=============================================================================
below this line are the unfixed bugs known:

[B] House doors still seem to crash sometimes. (door even vanishes??)
[B] wpos display hides wound states(eg.'Deep Gash')
[B] ever-charging arts (eg.star)
[B] 'You hit it.' etc in town (99% problem in zcave.m_idx)
    sometimes, monsters attack the player from nowhere.. prolly same root?
	* this only happens when rebooting the server and caves lost.
[B] some monsters become 'immune' to spell attacks.
[B][C] chat-history contains lines with 'mindcrafter'. 
[B] p_ptr->furry, lol
[B] 'Ring of Polymorphing of'.
[B] cannot 'run' near the outer permawall (run_test)
[B] mon_vis, obj_vis etc. are messed while the player is off.